samples/_failures_safe/1761341256_3a7430_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_950688c2.c: In function ‘main’:
./samples/SAFE/__tmp_950688c2.c:161:5: error: expected expression at end of input
  161 |     for (size_t i = 0; i < decompressed.size; i++)
      |     ^~~
./samples/SAFE/__tmp_950688c2.c:161:5: error: expected declaration or statement at end of input
